Login works, added SHA hashing to emails and phone numbers to search in database, plus more
