# internal/models/user.go
@@ -13,14 +13,16 @@ const (
 )
 
 type User struct {
-	ID          primitive.ObjectID `bson:"_id,omitempty" json:"id"`
-	FirstName   string             `bson:"first_name" json:"name"`
-	LastName    string             `bson:"last_name" json:"last_name"`
-	Email       string             `bson:"email" json:"email"`
-	PhoneNumber string             `bson:"phone_number" json:"phone_number"`
-	Password    string             `bson:"password" json:"password"`
-	CreatedAt   time.Time          `bson:"created_at" json:"created_at"`
-	UpdatedAt   time.Time          `bson:"updated_at" json:"updated_at"`
-	MFAEnabled  bool               `bson:"mfa_enabled" json:"mfa_enabled"`
-	Status      string             `bson:"status" json:"status"`
+	ID              primitive.ObjectID `bson:"_id,omitempty" json:"id"`
+	FirstName       string             `bson:"first_name" json:"name"`
+	LastName        string             `bson:"last_name" json:"last_name"`
+	Email           string             `bson:"email" json:"email"`
+	EmailHash       string             `bson:"email_hash" json:"email_hash"`
+	PhoneNumber     string             `bson:"phone_number" json:"phone_number"`
+	PhoneNumberHash string             `bson:"phone_number_hash" json:"phone_number_hash"`
+	Password        string             `bson:"password" json:"password"`
+	CreatedAt       time.Time          `bson:"created_at" json:"created_at"`
+	UpdatedAt       time.Time          `bson:"updated_at" json:"updated_at"`
+	MFAEnabled      bool               `bson:"mfa_enabled" json:"mfa_enabled"`
+	Status          string             `bson:"status" json:"status"`
 }
